# CodeChat_Editor

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  HTMLtoMarkdown_Prewrite.cchtml  KEEP_Markdown.js  LICENSE.cchtml  LICENSE.md  MarkdownExtensionProposal.cchtml  Markdown_HTML.js  Markdown_MD.js  PREWRITING.cchtml  Project2_Plan.cchtml  README.cchtml  README.md  capture_config.example.json  dist-workspace.toml  package-lock.json  potential_codeblock_fix.js  test_puzzle.py  toc.cchtml  toc.md  unit_test_README.cchtml
.devcontainer/: devcontainer.json  postCreateCommand.sh  postStartCommand.sh
.github/workflows/: check.yml  host.yml  plan.yml  release.yml
CodeChat/: CodeChat Editor ideas.cchtml  CodeChatEditor.html  CodeChatEditor.js  CodeChatEditorServer.py  CodeChatEditorServer.v  CodeToEditor.py
CodeChat/css/: CodeChatEditor.css
CodeChatEditor/: CodeChat Editor ideas.cchtml  CodeChatEditorServer.v  README.cchtml  toc.cchtml
CodeChatEditor/static/css/: CodeChatEditorProject.css  CodeChatEditorSidebar.css
CodeChatEditor/static/js/: CodeChatEditor.js
builder/: .gitignore  Cargo.toml
builder/src/: main.rs
client/: .eslintrc.yml  .gitignore  .prettierignore  .prettierrc.json5  eslint.config.js  package-lock.json  package.json  package.json5  pnpm-lock.yaml  readme.md  tsconfig.json
client/src/: .gitignore  CodeChat-editor.mts  CodeChatEditor-test.mts  CodeChatEditor.mjs  CodeChatEditor.mts  CodeChatEditorFramework.mts  CodeChatEditorToc.mts  CodeMirror-integration.mts  EditorComponents.mts  HashReader.mts  MathJax-config.mts  ace-webpack.mts  assert.mts  debug_enabled.mts  global.d.ts  graphviz-webcomponent-setup.mjs  graphviz-webcomponent-setup.mts  markdown_conversions.json  package.json  shared.mts  shared_types.mts  show_toast.mts  tinymce-config.mts  tinymce-webpack.mjs  tinymce-webpack.mts  tsconfig.json  typings.d.ts  webpack.config.js
client/src/codemirror/: codemirror_view_index.d.ts  codemirror_view_index.js
client/src/css/: CodeChatEditor.css  CodeChatEditorProject.css
client/src/graphviz-webcomponent/: graph-bundled.min.js  graph-bundled.min.js.map  graph-bundled.min.mjs  graph-bundled.min.mjs.map  graph.min.js  graph.min.js.map  graph.min.mjs  graph.min.mjs.map  index-bundled.min.js  index-bundled.min.js.map  index-bundled.min.mjs  index-bundled.min.mjs.map  index.min.js  index.min.js.map  index.min.mjs  index.min.mjs.map  renderer.min.js  script-editor.min.js  script-editor.min.js.map  script-editor.min.mjs  script-editor.min.mjs.map
client/src/src/: CodeChat-editor.ts  ace-webpack.ts  tinymce-webpack.ts
client/src/turndown/: turndown-plugin-gfm.browser.es.js  turndown.browser.es.d.ts  turndown.browser.es.js
client/src/wc-mermaid/: LICENSE.md  developer.md
client/static/: .gitignore  pdfjs-main.html
client/static/css/: CodeChatEditor.css  CodeChatEditorProject.css  (+2 more)
client/webpack/: .eslintrc.yml  .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
docs/: Markdown_HTML.js  changelog.md  code-blocks-doc-blocks.drawio  demo.md  design.md  implementation.cchtml  implementation.md  index.cchtml  index.md  manual.md  style_guide.cpp  test.py
examples/new-project-template/: toc.md
examples/no-spoon/: no_spoon.py
extensions/: contents.rst  developer.md  developer.rst  readme.md  universal.md  universal.rst
extensions/VSCode/: .eslintrc.yml  .gitignore  .prettierrc.json5  .vscodeignore  Cargo.toml  LICENSE.rst  README.md  contents.md  contents.rst  developer.md  developer.rst  eslint.config.js  jsconfig.json  package-lock.json  package.json  package.json5  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
extensions/VSCode/src/: capture-policy.test.js  capture-policy.test.mjs  capture-policy.ts  extension.ts  lib.rs
extensions/standalone/: Cargo.toml  dist.toml
extensions/standalone/src/: main.rs
extensions/standalone/tests/: cli.rs
llm/: claude_2026-04-04_history.md  claude_2026-04-04_query_and_responses.md
new-project-template/: README.cchtml  README.md  toc.cchtml  toc.md
server/: .gitignore  Cargo.toml  CodeChatEditorServer.v  bt  bt.ps1  cache.pptx  dist-workspace.toml  dist.toml  lexer.v  lexer_test.v  log4rs.yml  readme.md  run_until_fail.ps1
server/.cargo/: config  config.toml
server/.github/workflows/: npm-build.yml  release.yml
server/regex/: regex_util.v
server/scripts/: capture_events_schema.sql
server/src/: capture.rs  ide.rs  lexer.rs  lib.rs  main.rs  processing.rs  test_utils.rs  testing_logger.rs  translation.rs  webserver.rs
server/src/ide/: filewatcher.rs  vscode.rs
server/src/ide/vscode/: tests.rs
server/src/lexer/: lexer-walkthrough.md  pest_parser.rs  supported_languages.rs  tests.rs
server/src/lexer/pest/: c.pest  c.pestWA  parser_design.md  python.pest  rust.pest  shared.pest
server/src/processing/: cache.rs  tests.rs
server/src/webserver/: filewatcher.rs  tests.rs  vscode.rs
server/src/webserver/vscode/: tests.rs
server/tests/: cli.rs  overall.rs  overall_1.rs  overall_2.rs  overall_3.rs  overall_4.rs  overall_5.rs
server/tests/fixtures/code_chat_editor/ide/vscode/tests/test_vscode_ide_websocket4/: toc.md
server/tests/fixtures/overall/overall_1/test_client/: test.py
server/tests/fixtures/overall/overall_1/test_server/: test.txt  toc.md
server/tests/fixtures/overall/overall_core/test_6/: test.md
server/tests/fixtures/overall/overall_core/test_client/: test.py
server/tests/fixtures/overall/overall_core/test_client_updates/: test.py  toc.md
server/tests/fixtures/overall/overall_core/test_server/: test.md
server/tests/fixtures/overall/overall_core/thirtyfour/: test.py  toc.md
server/tests/overall/: overall_1.rs  overall_2.rs  overall_3.rs  overall_4.rs  overall_5.rs
server/tests/overall/common/: mod.rs
server/tests/overall_1_core/: mod.rs
server/tests/overall_2_core/: mod.rs
server/tests/overall_common/: mod.rs
server/tests/overall_core/: mod.rs
server/vweb/: vweb.v
server/wix/: main.wxs
test_utils/: Cargo.toml  readme.md
test_utils/src/: lib.rs  test_macros.rs  test_utils.rs  testing_logger.rs
(+13 files in other folders)
