# Copyright (C) 2025 Bryan A. Jones.
#
# This file is part of the CodeChat Editor.
#
# The CodeChat Editor is free software: you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option) any
# later version.
#
# The CodeChat Editor is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along with
# the CodeChat Editor. If not, see
# [http://www.gnu.org/licenses/](http://www.gnu.org/licenses/).
#
# `Cargo.toml` -- Rust build/package management config for the server
# ===================================================================
#
# General package configurations
# ------------------------------
[package]
authors = ["Bryan A. Jones", "Peter Loux"]
categories = ["development-tools", "text-editors"]
description = "A programmer's word processor."
edition = "2024"
homepage = "https://codechat-editor.onrender.com/fw/fsb/opt/render/project/src/README.md"
keywords = ["literate programming"]
license = "GPL-3.0-only"
name = "codechat-editor-server"
readme = "../README.md"
repository = "https://github.com/bjones1/CodeChat_Editor"
version = "0.2.0"

# This library allows other packages to use core CodeChat Editor features.
[lib]
name = "code_chat_editor"

# Dependencies
# ------------
[dependencies]
actix-files = "0.6"
actix-http = "3.9.0"
actix-rt = "2.9.0"
actix-server = "2.6.0"
actix-service = "2.0.3"
actix-web = "4"
actix-web-httpauth = "0.8.2"
actix-ws = "0.4"
ammonia = "4.1.2"
anyhow = "1.0.100"
bytes = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
dprint-plugin-markdown = { git = "https://github.com/bjones1/dprint-plugin-markdown.git", branch = "all-fixes" }
dunce = "1.0.5"
futures-util = "0.3.29"
htmd = { git = "https://github.com/bjones1/htmd.git", branch = "dom-interface", version = "0.5" }
# This must match the version of `markup5ever_rcdom`.
html5ever = "0.39"
htmlize = "1.0.6"
imara-diff = { version = "0.2", features = [] }
indoc = "2.0.5"
log = "0.4"
log4rs = "1.3"
markup5ever_rcdom = "0.39"
mime = "0.3.17"
mime_guess = "2.0.5"
minify-html = { git = "https://github.com/bjones1/minify-html.git", branch = "dev", version = "0.18.1" }
minreq = "3"
normalize-line-endings = "0.3.0"
notify-debouncer-full = "0.7"
path-slash = "0.2.1"
pest = "2.7.14"
pest_derive = "2.7.14"
phf = { version = "0.14", features = ["macros"] }
# Per the [docs](https://docs.rs/crate/pulldown-cmark/latest), skip building the
# binary.
pulldown-cmark = { version = "0.13", default-features = false, features = [
    "html",
] }
rand = "0.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
test_utils = { path = "../test_utils" }
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = "12"
url = "2.5.2"
urlencoding = "2"
webbrowser = "1.0.5"

# [Windows-only dependencies](https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#platform-specific-dependencies).
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_Storage_FileSystem"] }

# ### Development-only dependencies
[dev-dependencies]
actix-http = "3.9.0"
assert_fs = "1"
assertables = "10"
futures = "0.3.31"
predicates = "3.1.2"
pretty_assertions = "1.4.1"
thirtyfour = "0.37"
tokio-tungstenite = "0.30"

# #### Use local packages for development
[patch.crates-io]
# Commented out for now; uncomment to resume use.
#actix = { path = "../../actix/actix" }
#actix-rt = { path = "../../actix-net/actix-rt" }

# Release
# -------
#
# Specify release-only features for pulldown. See the
# [docs](https://docs.rs/crate/pulldown-cmark/latest).
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = "symbols"

# Distribution
# ------------
#
# This uses [cargo dist](https://opensource.axo.dev/cargo-dist) to build
# binaries across multiple platforms using github's CI/CD.
#
# The profile that `cargo dist` will build with.
[profile.dist]
inherits = "release"

# Code coverage
# -------------
#
[lints.rust]
# Avoid a lint about the `coverage` cfg set by `cargo llvm-cov` (see `bt
# cover`).
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

# Clippy config
# -------------
#
# A good article: https://emschwartz.me/your-clippy-config-should-be-stricter.
#
# Docs on clippy: see `cargo clippy --help`, `cargo check --help` (the target
# selection and feature selection flags seems to apply to clippy).
[lints.clippy]
# https://github.com/rust-lang/rust-clippy shows which categories are enabled by
# default; https://doc.rust-lang.org/stable/clippy/lints.html for a description
# of each of these categories.
#
# Individual lints below need an explicit `priority` higher than this group's
# implicit 0, or Cargo errors with "lint group `pedantic` has the same
# priority (0) as a lint" (see
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-lints-section).
pedantic = { level = "warn", priority = 0 }
# Disable specific pedantic lints that don't apply. Use LP docs instead of
# rustdoc for errors and panics.
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
# This warns at the phrase "CodeChat Editor", so it's disabled.
doc_markdown = { level = "allow", priority = 1 }
# Some lints relaxed for test code only via a single
# `#![cfg_attr(test, allow(...))]` line in each crate root (`src/lib.rs`,
# `src/main.rs`) and a plain `#![allow(...)]` in each `tests/*.rs` integration
# test binary (which is entirely test code).
