# Copyright (C) 2025 Bryan A. Jones.
#
# This file is part of the CodeChat Editor.
#
# The CodeChat Editor is free software: you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option) any
# later version.
#
# The CodeChat Editor is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along with
# the CodeChat Editor. If not, see
# [http://www.gnu.org/licenses/](http://www.gnu.org/licenses/).
#
# `Cargo.toml` -- Rust interface for the VSCode extension
# ==============================================================================
#
# General package configurations
# ------------------------------------------------------------------------------
[package]
authors = ["Bryan A. Jones", "Peter Loux"]
categories = ["development-tools", "text-editors"]
description = "A programmer's word processor."
edition = "2024"
homepage = "https://codechat-editor.onrender.com/fw/fsb/opt/render/project/src/README.md"
keywords = ["literate programming"]
license = "GPL-3.0-only"
name = "codechat-editor-vscode-extension"
readme = "../README.md"
repository = "https://github.com/bjones1/CodeChat_Editor"
version = "0.1.49"

[lib]
crate-type = ["cdylib"]

[dependencies]
codechat-editor-server = { path = "../../server" }
log = "0.4.28"
napi = { version = "3.0.0", features = ["tokio_rt"] }
napi-derive = "3.0.0"
serde_json = "1.0.145"

[build-dependencies]
napi-build = "2"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"
