# Copyright (C) 2025 Bryan A. Jones.
#
# This file is part of the CodeChat Editor.
#
# The CodeChat Editor is free software: you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option) any
# later version.
#
# The CodeChat Editor is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along with
# the CodeChat Editor. If not, see
# [http://www.gnu.org/licenses/](http://www.gnu.org/licenses/).
#
# `Cargo.toml` -- Rust build/package management config for the standalone CLI
# =============================================================================
#
# General package configurations
# ------------------------------
[package]
authors = ["Bryan A. Jones", "Peter Loux"]
categories = ["development-tools", "text-editors"]
description = "A programmer's word processor -- standalone command-line server."
edition = "2024"
homepage = "https://codechat-editor.onrender.com/fw/fsb/opt/render/project/src/README.md"
keywords = ["literate programming"]
license = "GPL-3.0-only"
name = "codechat-editor-standalone"
readme = "../../README.md"
repository = "https://github.com/bjones1/CodeChat_Editor"
version = "0.2.0"

# Dependencies
# ------------
[dependencies]
clap = { version = "4", features = ["derive"] }
codechat-editor-server = { path = "../../server" }
log = { version = "0.4", features = ["release_max_level_warn"] }
minreq = "3"
tokio = { version = "1", features = ["full"] }
webbrowser = "1.0.5"

# ### Development-only dependencies
[dev-dependencies]
actix-rt = "2.9.0"
actix-web = "4"
assert_cmd = "2"
assert_fs = "1"
assertables = "10"
predicates = "3.1.2"
test_utils = { path = "../../test_utils" }

# Release
# -------
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = "symbols"

# The profile that `cargo dist` will build with.
[profile.dist]
inherits = "release"

# Code coverage
# -------------
#
[lints.rust]
# Avoid a lint about the `coverage` cfg set by `cargo llvm-cov` (see `bt
# cover`).
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

# Clippy config
# -------------
[lints.clippy]
pedantic = { level = "warn", priority = 0 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
doc_markdown = { level = "allow", priority = 1 }
